fintech-gitops/observability/monitoring/ingress-grafana-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-prod
  namespace: monitoring-prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: grafana.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prod-grafana
                port:
                  number: 80
